samples/_failures_safe/1761336816_9fa72b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ac9f597.c: In function ‘transform_bounds’:
./samples/SAFE/__tmp_5ac9f597.c:123:49: error: expected ‘;’ at end of input
  123 |         if (transformed.y > result.max.y) result
      |                                                 ^
      |                                                 ;
./samples/SAFE/__tmp_5ac9f597.c:123:9: error: expected declaration or statement at end of input
  123 |         if (transformed.y > result.max.y) result
      |         ^~
./samples/SAFE/__tmp_5ac9f597.c:123:9: error: expected declaration or statement at end of input
